[package]
name = "fizzbuzz-task-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.135", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.22.0" }
graphul = "0.4.3"
random-string = "1.0.0"
chrono = "0.4.23"
rusqlite = { version = "0.28.0", features = ["bundled"] }
zenoh = "0.6.0-beta.1"